# collectfast

./: .codeclimate.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  README.txt  appveyor.yml  conftest.py  lint-requirements.txt  requirements.txt  runtests.py  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/: CODEOWNERS
.github/workflows/: ci.yaml  lint.yaml  test-suite-unreleased-django.yaml  test-suite.yaml
collectfast/: boto.py  etag.py  log.py  settings.py
collectfast/commands/: collectstatic.py
collectfast/management/commands/: collectstatic.py
collectfast/storage_extensions/: __init__.py  base.py  file_system.py  gcloud.py  s3boto.py  s3boto3.py
collectfast/strategies/: __init__.py  base.py  boto.py  boto3.py  filesystem.py  gcloud.py  swift.py
collectfast/tests/: __init__.py  boto3_subclass.py  mock.py  no_preload_metadata.py  settings.py  test_command.py  test_etag.py  test_settings.py  test_storage_extensions.py  utils.py
collectfast/tests/command/: test_command.py  test_copy_hooks.py  test_disable.py  test_post_copy_hook.py  test_post_process.py  utils.py
collectfast/tests/strategies/: test_caching_filesystem_strategy.py  test_caching_hash_strategy.py  test_guess_strategy.py  test_hash_strategy.py
collectfast/tests/test_storages/: boto_subclass.py  filesystem_subtype.py  unguessable.py
