[tool:pytest]
DJANGO_SETTINGS_MODULE = collectfast.tests.settings

[flake8]
exclude = appveyor, .idea, .git, .venv, .tox, __pycache__, *.egg-info, build
max-complexity = 8
max-line-length = 88
# ignore F821 until mypy-0.730 compatibility is released
# https://github.com/PyCQA/pyflakes/issues/475
# see this discussion as to why we're ignoring E722
# https://github.com/PyCQA/pycodestyle/issues/703
extend-ignore = E722 F821

[mypy]
python_version = 3.4
show_error_codes = True

no_implicit_reexport = True
no_implicit_optional = True
strict_equality = True
strict_optional = True
check_untyped_defs = True
disallow_incomplete_defs = True
ignore_missing_imports = True

warn_unused_configs = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_return_any = True
warn_unreachable = True

plugins =
    mypy_django_plugin.main

[mypy.plugins.django-stubs]
django_settings_module = collectfast.tests.settings

[coverage:run]
source = collectfast

[coverage:report]
omit = */tests/*
exclude_lines =
    pragma: no cover
    # ignore non-implementations
    \.\.\.

[metadata]
license_file = LICENSE
