[metadata]
name = Collectfast
version = attr: collectfast.__version__
description = A Faster Collectstatic
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license = MIT License
license_file = LICENSE
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Framework :: Django
author = Anton Agestam
author_email = git@antonagestam.se
url = https://github.com/antonagestam/collectfast/

[options]
include_package_data = True
packages = find:
install_requires =
    Django>=2.2
    django-storages>=1.6
    typing-extensions
python_requires = >=3.6

[options.package_data]
collectfast = py.typed

[bdist_wheel]
universal = true

[tool:pytest]
DJANGO_SETTINGS_MODULE = collectfast.tests.settings

[flake8]
exclude = appveyor, .idea, .git, .venv, .tox, __pycache__, *.egg-info, build
max-complexity = 8
max-line-length = 88
# ignore F821 until mypy-0.730 compatibility is released
# https://github.com/PyCQA/pyflakes/issues/475
# see this discussion as to why we're ignoring E722
# https://github.com/PyCQA/pycodestyle/issues/703
extend-ignore = E722 F821

[isort]
profile = black
src_paths = collectfast
force_single_line = True

[mypy]
python_version = 3.6
show_error_codes = True
pretty = True
files = .

no_implicit_reexport = True
no_implicit_optional = True
strict_equality = True
strict_optional = True
check_untyped_defs = True
disallow_incomplete_defs = True
ignore_missing_imports = False

warn_unused_configs = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_return_any = True
warn_unreachable = True

plugins =
    mypy_django_plugin.main

[mypy.plugins.django-stubs]
django_settings_module = collectfast.tests.settings

[mypy-storages.*,google.*,botocore.*,setuptools.*,pytest.*]
ignore_missing_imports = True

[coverage:run]
source = collectfast

[coverage:report]
omit = */tests/*
exclude_lines =
    pragma: no cover
    # ignore non-implementations
    \.\.\.
